Fixed elements shifting up when cursor hovered over button

--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ input::-webkit-inner-spin-button {
     font-size: 110%;
     font-weight: 600;
     cursor: pointer;
-    transition-duration: 0.1s;
-    transition-timing-function: ease-in;
-    position: absolute;
+    /* transition-duration: 0.1s;
+    transition-timing-function: ease-in; */
 }
 
 .submit:hover {
     color: #EF233C;
     background-color: #EDF2F4;
     border: 3px solid #EF233C;
+    margin-top: -3px;
 }
